// Vitest Snapshot v1

exports[`date defaults to a constant arbitrary time 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 36e8b445404a8072426a582dbc689028e49e391d301860ecc1df92ab98dbf527],
  "title": "",
  "type": "sb3",
}
`;

exports[`date option 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 ba0c40627982515f228f62dbe8b18fbad476f7e6294d78b7a794f354f42afa0f],
  "title": "",
  "type": "sb3",
}
`;
